--- a/html/oferta.html
+++ b/html/oferta.html
@@ -26,17 +26,16 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+            <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historico.html">Histórico de compra</a>
+                <a class="nav-link active" href="sobre.html">Sobre nós</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,22 +50,20 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
+                <a class="nav-link active" href="historico.html">Histórico de compra</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
               </li>
-              <div class="fim">
-                <li class="nav-item">
-                  <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="entrar.html">Entrar</a>
-                </li>
-                <li class="nav-item">
-                  <i class="bi bi-cart-plus"></i>
-                </li>
-              </div>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <a class="nav-link active" href="entrar.html">Entrar</a>
+                <i class="bi bi-cart-plus text-white"></i>
+              </li>
             </ul>
           </div>
         </div>
@@ -77,9 +74,9 @@
         class="bi bi-cart-check-fill"></i></h2>
     <div class="container">
       <div class="row mt-3 d-flex flex-wrap">
-        <div class="col-lg-3">
-          <div class="card">
-            <img src="../images/carmen3.jpg" class="card-img-top" alt="...">
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center ">
+            <img src="../images/carmen3.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Bolsa Carmen Steffans</h5>
               <p class="text-center antigo">R$ 829,90 </p>
@@ -88,9 +85,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
-          <div class="card">
-            <img src="../images/212rose.jpg" class="card-img-top" alt="...">
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/212rose.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Perfume 212-Vip</h5>
               <p class="text-center antigo">R$ 729,90 </p>
@@ -99,9 +96,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
-          <div class="card">
-            <img src="../images/malve4.jpeg" class="card-img-top" alt="...">
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/malve4.jpeg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Vestido infantil de frio</h5>
               <p class="text-center antigo">R$ 129,90 </p>
@@ -110,9 +107,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
-          <div class="card">
-            <img src="../images/fone.jpg" class="card-img-top" alt="...">
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/fone.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Fone JBL</h5>
               <p class="text-center antigo">R$ 129,90 </p>
@@ -124,9 +121,9 @@
       </div>
 
         <div class="row mt-3 d-flex flex-wrap">
-          <div class="col-lg-3">
-            <div class="card">
-              <img src="../images/oferta2.jpg" class="card-img-top" alt="...">
+          <div class="col-md-3 mb-2">
+            <div class="card align-items-center">
+              <img src="../images/oferta2.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
               <div class="card-body">
                 <h5 class="card-title text">Aspirador de pó</h5>
                 <p class="text-center antigo">R$ 229,90 </p>
@@ -135,9 +132,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="card">
-              <img src="../images/oferta3.jpg" class="card-img-top" alt="...">
+          <div class="col-md-3 mb-2">
+            <div class="card align-items-center">
+              <img src="../images/oferta3.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
               <div class="card-body">
                 <h5 class="card-title text">Cafeteria Ostér</h5>
                 <p class="text-center antigo">R$ 449,90 </p>
@@ -146,9 +143,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="card">
-              <img src="../images/oferta4.jpg" class="card-img-top" alt="...">
+          <div class="col-md-3 mb-2">
+            <div class="card align-items-center">
+              <img src="../images/oferta4.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
               <div class="card-body">
                 <h5 class="card-title text">Base Boca Rosa</h5>
                 <p class="text-center antigo">R$ 59,90 </p>
@@ -157,9 +154,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="card">
-              <img src="../images/oferta5.jpeg" class="card-img-top" alt="...">
+          <div class="col-md-3 mb-2">
+            <div class="card align-items-center">
+              <img src="../images/oferta5.jpeg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
               <div class="card-body">
                 <h5 class="card-title text">Pneu de carro</h5>
                 <p class="text-center antigo">R$ 289,90 </p>
@@ -173,32 +170,28 @@
 
 
       </section>
-      <footer>
-        <div class="footer">
+      <footer class="footer col-12">
+        <div class=" container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-6 col-md-3 mb-2 d-flex justify-content-center">
               <img class="segura" src="../images/Frame 69.png" alt="">
+            </div>   
+            <div class="col-6 col-md-3 mb-2 d-flex justify-content-center">
+              <img class= "pag" src="../images/Frame 30.png" alt="">
             </div>
-          </div>
-          <div>
-            <ul>
-              <p>Deixe-nos ajudar você:</p>
-              <li>Sua Conta</li>
-              <li>Frete e prazo de entrega</li>
-              <li>Devoluções e reembolsos </li>
-              <li>Ajuda</li>
-            </ul>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
-              <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
-              <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
+            <div class="col-12 col-sm-6 col-md-3 mb-2">
+              <ul>
+                <p>Deixe-nos ajudar você:</p>
+                <li>Sua Conta</li>
+                <li>Frete e prazo de entrega</li>
+                <li>Devoluções e reembolsos </li>
+                <li>Ajuda</li>
+              </ul>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="pag" src="../images/Frame 30.png" alt="">
+            <div class="col-12 col-sm-6 col-md-3 mb-2">
+              <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
+              <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
+              <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
             </div>
           </div>
         </div>
