--- a/html/cadastrar.html
+++ b/html/cadastrar.html
@@ -22,17 +22,16 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+            <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historico.html">Histórico de compra</a>
+                <a class="nav-link active" href="sobre.html">Sobre nós</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -47,22 +46,20 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
+                <a class="nav-link active" href="historico.html">Histórico de compra</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
               </li>
-              <div class="fim">
-                <li class="nav-item">
-                  <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="entrar.html">Entrar</a>
-                </li>
-                <li class="nav-item">
-                  <i class="bi bi-cart-plus"></i>
-                </li>
-              </div>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <a class="nav-link active" href="entrar.html">Entrar</a>
+                <i class="bi bi-cart-plus text-white"></i>
+              </li>
             </ul>
           </div>
         </div>
@@ -100,7 +97,7 @@
                 <label for="inputCity" class="form-label">Cidade</label>
                 <input type="text" class="form-control" id="inputCity">
               </div>
-              <div class="col-md-4">
+              <div class="col-md-2">
                 <label for="inputState" class="form-label">Estado</label>
                 <select id="inputState" class="form-select">
                   <option selected>Escolha...</option>
@@ -125,36 +122,32 @@
             </form>
           </div>
         </section>
-        <footer>
-            <div class="footer">
-              <div class="row">
-                <div class="col-md-6">
-                 <img class="segura" src="../images/Frame 69.png" alt="">
-                </div>
+        <footer class="footer col-12">
+          <div class=" container">
+            <div class="row">
+              <div class="col-6 col-lg-3 d-flex justify-content-center">
+                <img class="segura" src="../images/Frame 69.png" alt="">
+              </div>   
+              <div class="col-6 col-lg-3 d-flex justify-content-center">
+                <img class= "pag" src="../images/Frame 30.png" alt="">
               </div>
-              <div>
-                  <ul>
-                      <p>Deixe-nos ajudar você:</p>
-                      <li>Sua Conta</li>
-                      <li>Frete e prazo de entrega</li>
-                      <li>Devoluções e reembolsos </li>
-                      <li>Ajuda</li>
-                  </ul>
+              <div class="col-12 col-sm-6 col-lg-3">
+                <ul>
+                  <p>Deixe-nos ajudar você:</p>
+                  <li>Sua Conta</li>
+                  <li>Frete e prazo de entrega</li>
+                  <li>Devoluções e reembolsos </li>
+                  <li>Ajuda</li>
+                </ul>
               </div>
-              <div class="row">
-               <div class="col-md-12">
+              <div class="col-12 col-sm-6 col-lg-3">
                 <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
                 <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
                 <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
-               </div>    
               </div>
-              <div class="row">
-                <div class="col-md-6">
-                 <img class= "pag" src="../images/Frame 30.png" alt="">
-                </div>
-              </div>
-           </div>
-         </footer>
+            </div>
+          </div>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
