--- a/html/entrar.html
+++ b/html/entrar.html
@@ -23,20 +23,21 @@
         </form>
       </div>
     </nav>
+
+    
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+            <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historico.html">Histórico de compra</a>
+                <a class="nav-link active" href="sobre.html">Sobre nós</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,34 +52,35 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
+                <a class="nav-link active" href="historico.html">Histórico de compra</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
               </li>
-              <div class="fim">
-                <li class="nav-item">
-                  <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="entrar.html">Entrar</a>
-                </li>
-                <li class="nav-item">
-                  <i class="bi bi-cart-plus"></i>
-                </li>
-              </div>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <a class="nav-link active" href="entrar.html">Entrar</a>
+                <i class="bi bi-cart-plus text-white"></i>
+              </li>
             </ul>
           </div>
         </div>
       </div>
     </nav>
+
+
+    
   </header>
   <main>
     <section>
       <div class="container">
         <h2 class="text-center mt-3">Faça Login</h2>
         <div class="row">
-          <div class="col-md-6 mx-auto mt-5">
+          <div class="col-8 col-md-4 mx-auto mt-5">
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">E-mail</label>
@@ -98,32 +100,28 @@
         </div>
       </div>
     </section>
-    <footer>
-      <div class="footer">
+    <footer class="footer col-12">
+      <div class=" container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
             <img class="segura" src="../images/Frame 69.png" alt="">
+          </div>   
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
+            <img class= "pag" src="../images/Frame 30.png" alt="">
           </div>
-        </div>
-        <div>
-          <ul>
-            <p>Deixe-nos ajudar você:</p>
-            <li>Sua Conta</li>
-            <li>Frete e prazo de entrega</li>
-            <li>Devoluções e reembolsos </li>
-            <li>Ajuda</li>
-          </ul>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
-            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
-            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <ul>
+              <p>Deixe-nos ajudar você:</p>
+              <li>Sua Conta</li>
+              <li>Frete e prazo de entrega</li>
+              <li>Devoluções e reembolsos </li>
+              <li>Ajuda</li>
+            </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img class="pag" src="../images/Frame 30.png" alt="">
+          <div class="col-12 col-sm-6 col-lg-3">
+            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
+            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
+            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
           </div>
         </div>
       </div>
