--- a/html/infantil.html
+++ b/html/infantil.html
@@ -26,17 +26,16 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+            <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historico.html">Histórico de compra</a>
+                <a class="nav-link active" href="sobre.html">Sobre nós</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,22 +50,20 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
+                <a class="nav-link active" href="historico.html">Histórico de compra</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
               </li>
-              <div class="fim">
-                <li class="nav-item">
-                  <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="entrar.html">Entrar</a>
-                </li>
-                <li class="nav-item">
-                  <i class="bi bi-cart-plus"></i>
-                </li>
-              </div>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <a class="nav-link active" href="entrar.html">Entrar</a>
+                <i class="bi bi-cart-plus text-white"></i>
+              </li>
             </ul>
           </div>
         </div>
@@ -104,27 +101,27 @@
         <div class="container">
             <h1 class="text-center mt-5 text">Brandili</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
-                    <img src="../images/bran1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/bran1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Conjunto Ursinho</p>
                     <p class="text-center">R$ 125,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/bran2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/bran2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Conjunto borboleta</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/bran3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/bran3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Vestido elefante</p>
                     <p class="text-center">R$ 89,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/bran4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/bran4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Conjunto Praia</p>
                     <p class="text-center">R$ 29,90</p></div>
-                <div class="col-md-2 card">
-                    <img src="../images/bran5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/bran5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Blusa Dinossauro 3D</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
@@ -137,27 +134,27 @@
         <div class="container">
             <h1 class="text-center mt-5 text">Malvee Kids</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card card">
-                    <img src="../images/malve1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card card">
+                    <img src="../images/malve1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Blusa de frio Skye</p>
                     <p class="text-center">R$ 49,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/malve2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/malve2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Blusa de frio Chase</p>
                     <p class="text-center">R$ 49,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/malve3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/malve3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Blusa Manga Longa</p>
                     <p class="text-center">R$ 88,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/malve4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/malve4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Vestido manga longa</p>
                     <p class="text-center">R$ 59,90</p></div>
-                <div class="col-md-2 card">
-                    <img src="../images/malve5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/malve5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Conjunto de frio</p>
                     <p class="text-center">R$ 89,90</p>
                 </div>
@@ -169,59 +166,55 @@
         <div class="container">
             <h1 class="text-center mt-5 text">Carter Kids</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
-                    <img src="../images/ca1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ca1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Kit 3 peça feminino</p>
                     <p class="text-center">R$ 229,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/ca2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ca2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Conjunto Calça e blusa masculino</p>
                     <p class="text-center">R$ 119,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/ca3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ca3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Kit 3 peças masculino</p>
                     <p class="text-center">R$ 229,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/ca4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ca4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Kit duas calças</p>
                     <p class="text-center">R$ 99,90</p></div>
-                <div class="col-md-2 card">
-                    <img src="../images/ca5.png" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ca5.png" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Conjunto Calça e blusa feminino</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
             </div>
         </div>
     </section>
-    <footer>
-      <div class="footer">
+    <footer class="footer col-12">
+      <div class=" container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
             <img class="segura" src="../images/Frame 69.png" alt="">
+          </div>   
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
+            <img class= "pag" src="../images/Frame 30.png" alt="">
           </div>
-        </div>
-        <div>
-          <ul>
-            <p>Deixe-nos ajudar você:</p>
-            <li>Sua Conta</li>
-            <li>Frete e prazo de entrega</li>
-            <li>Devoluções e reembolsos </li>
-            <li>Ajuda</li>
-          </ul>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
-            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
-            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <ul>
+              <p>Deixe-nos ajudar você:</p>
+              <li>Sua Conta</li>
+              <li>Frete e prazo de entrega</li>
+              <li>Devoluções e reembolsos </li>
+              <li>Ajuda</li>
+            </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img class="pag" src="../images/Frame 30.png" alt="">
+          <div class="col-12 col-sm-6 col-lg-3">
+            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
+            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
+            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
           </div>
         </div>
       </div>
