--- a/html/masculino.html
+++ b/html/masculino.html
@@ -26,17 +26,16 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+            <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historico.html">Histórico de compra</a>
+                <a class="nav-link active" href="sobre.html">Sobre nós</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,22 +50,20 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
+                <a class="nav-link active" href="historico.html">Histórico de compra</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
               </li>
-              <div class="fim">
-                <li class="nav-item">
-                  <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="entrar.html">Entrar</a>
-                </li>
-                <li class="nav-item">
-                  <i class="bi bi-cart-plus"></i>
-                </li>
-              </div>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <a class="nav-link active" href="entrar.html">Entrar</a>
+                <i class="bi bi-cart-plus text-white"></i>
+              </li>
             </ul>
           </div>
         </div>
@@ -104,27 +101,27 @@
         <div class="container">
             <h1 class="text-center mt-5 text">Calvin Klein</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
-                    <img src="../images/ck1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ck1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Camiseta Preta CK</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/ck2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ck2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Camiseta Azul CL</p>
                     <p class="text-center">R$ 79,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/ck3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ck3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Kit 2 cuecas CK</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/ck4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ck4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Tênis Confort CK</p>
                     <p class="text-center">R$ 229,90</p></div>
-                <div class="col-md-2 card">
-                    <img src="../images/ck5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/ck5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Moleton Preto CK</p>
                     <p class="text-center">R$ 89,90</p>
                 </div>
@@ -137,27 +134,27 @@
         <div class="container">
             <h1 class="text-center mt-5 text">Tommy Hilfiger</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
-                    <img src="../images/tommy1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/tommy1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Óculos</p>
                     <p class="text-center">R$ 429,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/tommy2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/tommy2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Perfume cheiroso</p>
                     <p class="text-center">R$ 589,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/tommy3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/tommy3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Blusa Preta</p>
                     <p class="text-center">R$ 139,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/tommy4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/tommy4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Carteira</p>
                     <p class="text-center">R$ 129,90</p></div>
-                <div class="col-md-2 card">
-                    <img src="../images/tommy5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/tommy5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Moleton Cinza</p>
                     <p class="text-center">R$ 269,90</p>
                 </div>
@@ -169,59 +166,55 @@
         <div class="container">
             <h1 class="text-center mt-5 text">Nike</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
-                    <img src="../images/nike1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/nike1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Mochila Preta</p>
                     <p class="text-center">R$ 199,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/nike2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/nike2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Camiseta Branca</p>
                     <p class="text-center">R$ 169,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/nike3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/nike3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Tênis Air Force branco</p>
                     <p class="text-center">R$ 449,90</p>
                 </div>
-                <div class="col-md-2 card">
-                    <img src="../images/nike4.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/nike4.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Tênis Air Max</p>
                     <p class="text-center">R$ 699,90</p></div>
-                <div class="col-md-2 card">
-                    <img src="../images/nike5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                <div class="col-4 col-md-2 card">
+                    <img src="../images/nike5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px; object-fit:cover;">
                     <p class="text-center">Chinelo slide</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
             </div>
         </div>
     </section>
-    <footer>
-      <div class="footer">
+    <footer class="footer col-12">
+      <div class=" container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
             <img class="segura" src="../images/Frame 69.png" alt="">
+          </div>   
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
+            <img class= "pag" src="../images/Frame 30.png" alt="">
           </div>
-        </div>
-        <div>
-          <ul>
-            <p>Deixe-nos ajudar você:</p>
-            <li>Sua Conta</li>
-            <li>Frete e prazo de entrega</li>
-            <li>Devoluções e reembolsos </li>
-            <li>Ajuda</li>
-          </ul>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
-            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
-            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <ul>
+              <p>Deixe-nos ajudar você:</p>
+              <li>Sua Conta</li>
+              <li>Frete e prazo de entrega</li>
+              <li>Devoluções e reembolsos </li>
+              <li>Ajuda</li>
+            </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img class="pag" src="../images/Frame 30.png" alt="">
+          <div class="col-12 col-sm-6 col-lg-3">
+            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
+            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
+            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
           </div>
         </div>
       </div>
