--- a/html/perfumaria.html
+++ b/html/perfumaria.html
@@ -26,17 +26,16 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+            <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historico.html">Histórico de compra</a>
+                <a class="nav-link active" href="sobre.html">Sobre nós</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,22 +50,20 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
+                <a class="nav-link active" href="historico.html">Histórico de compra</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
               </li>
-              <div class="fim">
-                <li class="nav-item">
-                  <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="entrar.html">Entrar</a>
-                </li>
-                <li class="nav-item">
-                  <i class="bi bi-cart-plus"></i>
-                </li>
-              </div>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
+              </li>
+              <li class="nav-item d-flex align-items-center">
+                <a class="nav-link active" href="entrar.html">Entrar</a>
+                <i class="bi bi-cart-plus text-white"></i>
+              </li>
             </ul>
           </div>
         </div>
@@ -104,26 +101,26 @@
         <div class="container">
             <h1 class="text-center mt-5 mb-2 text"> Carolina Herrera</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/212.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212 VIP</p>
                     <p class="text-center">R$ 669,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/CH.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Good Girl </p>
                     <p class="text-center">R$ 688,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/212rose.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212 Vip-Rose</p>
                     <p class="text-center">R$ 599,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/212red.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212 Vip-Red</p>
                     <p class="text-center">R$ 329,90</p></div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/212multicor.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212-Vip Party Fever</p>
                     <p class="text-center">R$ 469,90</p>
@@ -137,26 +134,26 @@
         <div class="container">
             <h1 class="text-center mt-5 mb-2 text">O Boticário</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/bo1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Egeo Dolce</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/bo2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit elysee blanc</p>
                     <p class="text-center">R$ 329,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/bo3.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Florata Red</p>
                     <p class="text-center">R$ 89,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/bo4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Coffe Luck</p>
                     <p class="text-center">R$ 159,90</p></div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/bo5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Malbec</p>
                     <p class="text-center">R$ 189,90</p>
@@ -169,26 +166,26 @@
         <div class="container">
             <h1 class="text-center mt-5 mb-2 text">Christian Dior</h1>
             <div class="row text-center image">
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/dior1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Miss Dior Rosa</p>
                     <p class="text-center">R$ 899,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/dior2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Miss Dior Rosa Ciclete</p>
                     <p class="text-center">R$ 857,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/dior3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Jadore</p>
                     <p class="text-center">R$ 959,90</p>
                 </div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/dior4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Miss Dior Amarelo</p>
                     <p class="text-center">R$ 879,90</p></div>
-                <div class="col-md-2 card">
+                <div class="col-4 col-md-2 card">
                     <img src="../images/dior5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Hipnotic</p>
                     <p class="text-center">R$ 679,90</p>
@@ -205,32 +202,28 @@
             </nav>
         </div>
     </section>
-    <footer>
-      <div class="footer">
+    <footer class="footer col-12">
+      <div class=" container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
             <img class="segura" src="../images/Frame 69.png" alt="">
+          </div>   
+          <div class="col-6 col-lg-3 d-flex justify-content-center">
+            <img class= "pag" src="../images/Frame 30.png" alt="">
           </div>
-        </div>
-        <div>
-          <ul>
-            <p>Deixe-nos ajudar você:</p>
-            <li>Sua Conta</li>
-            <li>Frete e prazo de entrega</li>
-            <li>Devoluções e reembolsos </li>
-            <li>Ajuda</li>
-          </ul>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
-            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
-            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <ul>
+              <p>Deixe-nos ajudar você:</p>
+              <li>Sua Conta</li>
+              <li>Frete e prazo de entrega</li>
+              <li>Devoluções e reembolsos </li>
+              <li>Ajuda</li>
+            </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img class="pag" src="../images/Frame 30.png" alt="">
+          <div class="col-12 col-sm-6 col-lg-3">
+            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
+            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
+            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
           </div>
         </div>
       </div>
