--- a/html/sobre.html
+++ b/html/sobre.html
@@ -25,51 +25,50 @@
         </nav>           
         <nav class="navbar navbar-expand-lg navbar-light nav">
           <div class="container-fluid">
-            <div class="container"> 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="container">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+                <ul class="navbar-nav mb-2 me-auto mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="sobre.html">Sobre nós</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Categoria
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
+                      <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
+                      <li><a class="dropdown-item" href="infantil.html">Crianças</a></li>
+                      <li><a class="dropdown-item" href="perfumaria.html">Perfumaria</a></li>
+                    </ul>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="historico.html">Histórico de compra</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Categoria
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                     <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
-                     <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
-                     <li><a class="dropdown-item" href="infantil.html">Crianças</a></li>
-                     <li><a class="dropdown-item" href="perfumaria.html">Perfumaria</a></li>
-                     </ul>
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="oferta.html" >Ofertas do dia</a>
+                    <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
                   </li>
-                   <li class="nav-item">
-                    <a class="nav-link active" href="sobre.html" >Sobre nós</a>
+                </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
                   </li>
-                <div class="fim">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="cadastrar.html">Criar Conta</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="entrar.html">Entrar</a>
-                    </li>
-                    <li class="nav-item">
-                        <i class="bi bi-cart-plus"></i>
-                    </li>
-                </div>
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link active" href="entrar.html">Entrar</a>
+                    <i class="bi bi-cart-plus text-white"></i>
+                  </li>
                 </ul>
               </div>
-              </div>
             </div>
-          </nav>
+          </div>
+        </nav>
     </header>
     <main>
         <section> 
@@ -90,36 +89,32 @@
               <img class="img-fluid slogan" src="../images/bannersevilha.png" alt="Banner">
             </div>
           </section>        
-          <footer>
-              <div class="footer">
-                <div class="row">
-                  <div class="col-md-6">
-                   <img class="segura" src="../images/Frame 69.png" alt="">
-                  </div>
+          <footer class="footer col-12">
+            <div class=" container">
+              <div class="row">
+                <div class="col-6 col-lg-3 d-flex justify-content-center">
+                  <img class="segura" src="../images/Frame 69.png" alt="">
+                </div>   
+                <div class="col-6 col-lg-3 d-flex justify-content-center">
+                  <img class= "pag" src="../images/Frame 30.png" alt="">
                 </div>
-                <div>
-                    <ul>
-                        <p>Deixe-nos ajudar você:</p>
-                        <li>Sua Conta</li>
-                        <li>Frete e prazo de entrega</li>
-                        <li>Devoluções e reembolsos </li>
-                        <li>Ajuda</li>
-                    </ul>
+                <div class="col-12 col-sm-6 col-lg-3">
+                  <ul>
+                    <p>Deixe-nos ajudar você:</p>
+                    <li>Sua Conta</li>
+                    <li>Frete e prazo de entrega</li>
+                    <li>Devoluções e reembolsos </li>
+                    <li>Ajuda</li>
+                  </ul>
                 </div>
-                <div class="row">
-                 <div class="col-md-12">
+                <div class="col-12 col-sm-6 col-lg-3">
                   <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
                   <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
                   <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
-                 </div>    
                 </div>
-                <div class="row">
-                  <div class="col-md-6">
-                   <img class= "pag" src="../images/Frame 30.png" alt="">
-                  </div>
-                </div>
-             </div>
-           </footer>
+              </div>
+            </div>
+          </footer>
             
       </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
